# Neon_Samples

./: README.md
DIO/: NeonListenTrigger.py
Neon-20xA/Python/Capture/: Capture-SaveFile.py  Capture-appropho.py  Capture-appropho_set_property.py  capture.sh
Neon-20xA/Python/Inference/: detectnet-appropho.py
Neon-20xA/Python/Trigger/: TriggerAndCapture_20xA.py  Trigger_201A.py
Neon-20xB/C++/Capture_and_Inference/: CMakeLists.txt  CMakePreBuild.sh  README.md
Neon-20xB/C++/Capture_and_Inference/c/: superResNet.cpp
Neon-20xB/C++/Capture_and_Inference/data/networks/: detectnet.prototxt
Neon-20xB/C++/Capture_and_Inference/docs/: CMakeLists.txt  Doxyfile.in  aux-contents.md  building-nvcaffe.md  deep-learning.md  digits-native.md  digits-setup.md  digits-workflow.md  doc-groups.h  index.html  navtree.js  other-examples.md
Neon-20xB/C++/Capture_and_Inference/docs/html/: Endian_8h.html  Endian_8h.js  Endian_8h_source.html  Event_8h.html  Event_8h_source.html  IPv4_8h.html  IPv4_8h.js  IPv4_8h_source.html  Mutex_8h.html  Mutex_8h_source.html  NetworkAdapter_8h.html  NetworkAdapter_8h.js  NetworkAdapter_8h_source.html  Process_8h.html  Process_8h_source.html  Socket_8h.html  Socket_8h.js  Socket_8h_source.html  Thread_8h.html  Thread_8h.js  Thread_8h_source.html  XML_8h.html  XML_8h.js  XML_8h_source.html  annotated.html  annotated_dup.js  classEvent-members.html  classEvent.html  classEvent.js  classInputDevices-members.html  classInputDevices.html  classInputDevices.js  classJoystickDevice-members.html  classJoystickDevice.html  classJoystickDevice.js  classKeyboardDevice-members.html  classKeyboardDevice.html  classKeyboardDevice.js  classMutex-members.html  classMutex.html  (+375 more)
Neon-20xB/C++/Capture_and_Inference/docs/html/python/: jetson.html  jetson.inference.html  jetson.utils.html
Neon-20xB/C++/Capture_and_Inference/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.html  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+120 more)
Neon-20xB/C++/Capture_and_Inference/examples/: CMakeLists.txt  README.md
Neon-20xB/C++/Capture_and_Inference/examples/imagenet-camera/: CMakeLists.txt  imagenet-camera.cpp
Neon-20xB/C++/Capture_and_Inference/examples/imagenet-console/: CMakeLists.txt  imagenet-console.cpp
Neon-20xB/C++/Capture_and_Inference/tools/: CMakeLists.txt  cat-dog-dataset.sh  cityscapes-prep.sh  cityscapes-prep2.sh  coco2kitti.py  depallet-images.sh  imagenet-download.py  imagenet-subset.sh  install-pytorch.sh  resize-images.sh  resize-images2.sh  synthia-all-prepare.sh  synthia-seq-prepare.sh  synthia-seq-remap-labels.sh
Neon-20xB/C++/Capture_and_Inference/tools/camera-capture/: CMakeLists.txt  camera-capture.cpp  captureWindow.cpp  captureWindow.h  controlWindow.cpp  controlWindow.h
Neon-20xB/C++/Capture_and_Inference/tools/trt-bench/: trt-bench.cpp
Neon-20xB/C++/Capture_and_Inference/tools/trt-console/: CMakeLists.txt
Neon-20xB/C++/Capture_and_Inference/utils/: CMakeLists.txt  LICENSE.md  commandLine.cpp  commandLine.h  mat33.h
Neon-20xB/C++/Capture_and_Inference/utils/camera/: indCamera.cpp
Neon-20xB/C++/Capture_and_Inference/utils/camera/camera-viewer/: camera-viewer.cpp
Neon-20xB/C++/Capture_and_Inference/utils/cuda/: cudaMappedMemory.h  cudaNormalize.cu  cudaNormalize.h  cudaResize.cu  cudaUtility.h  cudaYUV.h
Neon-20xB/C++/Capture_and_Inference/utils/display/: glTexture.cpp
Neon-20xB/C++/Capture_and_Inference/utils/display/gl-display-test/: CMakeLists.txt  gl-display-test.cpp
Neon-20xB/C++/Capture_and_Inference/utils/image/: imageIO.cpp  imageIO.h
Neon-20xB/C++/Capture_and_Inference/utils/input/: devInput.cpp  devInput.h  devJoystick.cpp  devJoystick.h  devKeyboard.cpp
Neon-20xB/C++/Capture_and_Inference/utils/python/bindings/: PyCUDA.h  PyUtils.cpp
Neon-20xB/C++/Capture_and_Inference/utils/python/python/Jetson/Utils/: __init__.py
Neon-20xB/Python/Capture/: Capture-basler.py  OneShot-basler.py
Neon-20xB/Python/EasyDeepOCR/: DeepOCR_Neon_Readme.md  OCR_preview.py  README.md
Neon-20xB/Python/Inference/: detectnet-basler.py
Neon-20xB/Python/Trigger/: Trigger_Basler.py
